# ocaml-aws

./: .envrc  .gitignore  .merlin  .ocamlformat  .ocamlformat-ignore  .travis.yml  CHANGES.md  Makefile  README.md  _oasis  _tags  aws-async.opam  aws-autoscaling.opam  aws-cloudformation.opam  aws-cloudtrail.opam  aws-cloudwatch.opam  aws-dynamodb.opam  aws-ec2.opam  aws-elasticache.opam  aws-elasticloadbalancing.opam  aws-elasticmapreduce.opam  aws-gen.opam  aws-kms.opam  aws-lambda.opam  aws-lwt.opam  aws-rds.opam  aws-route53.opam  aws-s3.opam  aws-sdb.opam  aws-sqs.opam  aws-ssm.opam  aws-sts.opam  aws-test.opam  aws.opam  aws_autoscaling.opam  aws_cloudformation.opam  aws_cloudtrail.opam  aws_cloudwatch.opam  aws_ec2.opam  aws_elasticache.opam  (+19 more)
async/: aws_async.mllib  dune  jbuild  runtime.ml  runtime.mli
aws/: index.html
aws-async/: index.html
aws-autoscaling/: index.html
aws-cloudformation/: index.html
aws-cloudtrail/: index.html
aws-cloudwatch/: index.html
aws-ec2/: index.html
aws-elasticache/: index.html
aws-elasticloadbalancing/: index.html
aws-gen/: index.html
aws-lwt/: index.html
aws-rds/: index.html
aws-route53/: index.html
aws-sdb/: index.html
aws-sqs/: index.html
aws-ssm/: index.html
aws-sts/: index.html
input/: README.md  endpoints.json  errors.json
lib/: META  aws.ml  aws.mli  aws.odocl  dune  (+12 more)
libraries/autoscaling/lib_test/: aws_autoscaling_test.ml  dune  test_async.ml  test_lwt.ml
libraries/cloudtrail/lib_test/: aws_cloudtrail_test.ml  dune  test_async.ml  test_lwt.ml
libraries/ec2/: _oasis  _tags  aws_ec2.opam  myocamlbuild.ml  setup.ml
libraries/ec2/lib/: META  acceptReservedInstancesExchangeQuote.ml  acceptReservedInstancesExchangeQuote.mli  acceptTransitGatewayPeeringAttachment.ml  acceptTransitGatewayPeeringAttachment.mli  acceptTransitGatewayVpcAttachment.ml  acceptTransitGatewayVpcAttachment.mli  acceptVpcEndpointConnections.ml  acceptVpcEndpointConnections.mli  acceptVpcPeeringConnection.ml  acceptVpcPeeringConnection.mli  advertiseByoipCidr.ml  advertiseByoipCidr.mli  allocateAddress.ml  allocateAddress.mli  allocateHosts.ml  allocateHosts.mli  applySecurityGroupsToClientVpnTargetNetwork.ml  applySecurityGroupsToClientVpnTargetNetwork.mli  assignIpv6Addresses.ml  assignIpv6Addresses.mli  assignPrivateIpAddresses.ml  assignPrivateIpAddresses.mli  associateAddress.ml  associateAddress.mli  associateClientVpnTargetNetwork.ml  associateClientVpnTargetNetwork.mli  associateDhcpOptions.ml  associateDhcpOptions.mli  associateEnclaveCertificateIamRole.ml  associateEnclaveCertificateIamRole.mli  associateIamInstanceProfile.ml  associateIamInstanceProfile.mli  associateRouteTable.ml  associateRouteTable.mli  associateSubnetCidrBlock.ml  associateSubnetCidrBlock.mli  associateTransitGatewayMulticastDomain.ml  associateTransitGatewayMulticastDomain.mli  associateTransitGatewayRouteTable.ml  (+814 more)
libraries/ec2/lib_test/: aws_ec2_test.ml  dune  jbuild  test.ml  test_async.ml  test_lwt.ml
libraries/ec2/opam/: findlib  opam
libraries/elasticache/: _oasis  _tags  aws_elasticache.opam  myocamlbuild.ml  opam  setup.ml
libraries/elasticache/lib/: META  addTagsToResource.ml  addTagsToResource.mli  authorizeCacheSecurityGroupIngress.ml  authorizeCacheSecurityGroupIngress.mli  aws-elasticache.mllib  aws-elasticache.odocl  aws_elasticache.mllib  batchApplyUpdateAction.ml  batchApplyUpdateAction.mli  batchStopUpdateAction.ml  batchStopUpdateAction.mli  completeMigration.ml  completeMigration.mli  copySnapshot.ml  copySnapshot.mli  createCacheCluster.ml  createCacheCluster.mli  createCacheParameterGroup.ml  createCacheParameterGroup.mli  createCacheSecurityGroup.ml  createCacheSecurityGroup.mli  createCacheSubnetGroup.ml  createCacheSubnetGroup.mli  createGlobalReplicationGroup.ml  createGlobalReplicationGroup.mli  createReplicationGroup.ml  createReplicationGroup.mli  createSnapshot.ml  createSnapshot.mli  createUser.ml  createUser.mli  createUserGroup.ml  createUserGroup.mli  decreaseNodeGroupsInGlobalReplicationGroup.ml  decreaseNodeGroupsInGlobalReplicationGroup.mli  decreaseReplicaCount.ml  decreaseReplicaCount.mli  deleteCacheCluster.ml  deleteCacheCluster.mli  (+100 more)
libraries/elasticache/lib_test/: aws_elasticache_test.ml  dune  test_async.ml  test_lwt.ml
libraries/elasticache/opam/: findlib  opam
libraries/elasticmapreduce/lib_test/: aws_elasticmapreduce_test.ml  dune  test_async.ml  test_lwt.ml
libraries/lambda/lib_test/: aws_lambda_test.ml  dune  test_async.ml  test_lwt.ml
libraries/sqs/lib_test/: aws_sqs_test.ml  dune  test_async.ml  test_lwt.ml
libraries/ssm/: _oasis  _tags  aws_ssm.opam  myocamlbuild.ml  opam  setup.ml
libraries/ssm/lib/: META  addTagsToResource.ml  addTagsToResource.mli  aws-ssm.mldylib  aws-ssm.mlpack  aws_ssm.mllib  cancelCommand.ml  cancelCommand.mli  cancelMaintenanceWindowExecution.ml  cancelMaintenanceWindowExecution.mli  createActivation.ml  createActivation.mli  createAssociation.ml  createAssociation.mli  createAssociationBatch.ml  createAssociationBatch.mli  createDocument.ml  createDocument.mli  createMaintenanceWindow.ml  createMaintenanceWindow.mli  createOpsItem.ml  createOpsItem.mli  createPatchBaseline.ml  createPatchBaseline.mli  createResourceDataSync.ml  createResourceDataSync.mli  deleteActivation.ml  deleteActivation.mli  deleteAssociation.ml  deleteAssociation.mli  deleteDocument.ml  deleteDocument.mli  deleteInventory.ml  deleteInventory.mli  deleteMaintenanceWindow.ml  deleteMaintenanceWindow.mli  deleteParameter.ml  deleteParameter.mli  deleteParameters.ml  deleteParameters.mli  (+214 more)
libraries/ssm/lib_test/: aws_ssm_test.ml  dune  test_async.ml  test_lwt.ml
libraries/ssm/opam/: findlib  opam
libraries/sts/lib_test/: aws_sts_test.ml  dune  test_async.ml  test_lwt.ml
src/: .merlin  aws_gen.ml  constraint_adapter.ml  dune  endpoint_gen.ml  endpoints.atd  endpoints_j.ml  endpoints_j.mli  endpoints_t.ml  endpoints_t.mli  generate.ml  generate.mli  jbuild  mk_opam  reading.ml  reading.mli  structures.ml  structures.mli  syntax.ml  templates.ml  templates.mli  util.ml  util.mli
(+11605 files in other folders)
