opam-version: "2.0"
maintainer: "Tim McGilchrist <timmcgil@gmail.com>"
authors: [ "Spiros Eliopoulos <spiros@inhabitedtype.com>"
           "Daniel Patterson <dbp@dbpmail.net>"
           "Tim McGilchrist <timmcgil@gmail.com>"]
synopsis: "Amazon Web Services SDK bindings for async"
description: "Amazon Web Services SDK bindings for async"
version: "1.2"
license: "BSD-3-clause"
homepage: "https://github.com/inhabitedtype/ocaml-aws"
dev-repo: "git+https://github.com/inhabitedtype/ocaml-aws.git"
bug-reports: "https://github.com/inhabitedtype/ocaml-aws/issues"
doc: "https://github.com/inhabitedtype/ocaml-aws"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"        {>= "4.04.0"}
  "aws"          {= version}
  "async"        {>= "v0.9.0" & < "v0.15"}
  "async_kernel" {>= "v0.9.0" & < "v0.15"}
  "async_unix"   {>= "v0.9.0" & < "v0.15"}
  "cohttp"       {>= "2.4.0" & < "3.0.0"}
  "cohttp-async" {>= "2.4.0" & < "3.0.0"}
  "dune"         {>= "2.7"}
]
