opam-version: "2.0"
maintainer: "Tim McGilchrist <timmcgil@gmail.com>"
authors: [ "Spiros Eliopoulos <spiros@inhabitedtype.com>"
           "Daniel Patterson <dbp@dbpmail.net>"
           "Tim McGilchrist <timmcgil@gmail.com>"
         ]
synopsis: "Amazon Web Services SDK bindings to Amazon Elastic Compute Cloud"
description: "Amazon Web Services SDK bindings to Amazon Elastic Compute Cloud"
version: "1.2"
license: "BSD-3-clause"
homepage: "https://github.com/inhabitedtype/ocaml-aws"
dev-repo: "git+https://github.com/inhabitedtype/ocaml-aws.git"
bug-reports: "https://github.com/inhabitedtype/ocaml-aws/issues"
doc: "https://github.com/inhabitedtype/ocaml-aws"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.08"}
  "aws" {= version}
  "dune" {>= "2.7"}
  "ounit2" {with-test & >= "2.2.4"}
  "cohttp-async" {with-test & >= "2.4.0" & < "3.0.0"}
  "cohttp-lwt" {with-test & >= "2.4.0" & < "3.0.0"}
  "cohttp-lwt-unix" {with-test & >= "2.4.0" & < "3.0.0"}
  "lwt" {with-test & >= "4.0.0" & < "5.5.0"}
  "yojson" {with-test & >= "1.7.0"}
]
