opam-version: "2.0"
synopsis: "Amazon Web Services code generator"
description:
  "Amazon Web Services code generator - Builds OCaml bindings for AWS using botocore API definition"
maintainer: "Tim McGilchrist <timmcgil@gmail.com>"
authors: [
  "Spiros Eliopoulos <spiros@inhabitedtype.com>"
  "Daniel Patterson <dbp@dbpmail.net>"
  "Tim McGilchrist <timmcgil@gmail.com>"
]
license: "BSD-3-clause"
homepage: "https://github.com/inhabitedtype/ocaml-aws"
bug-reports: "https://github.com/inhabitedtype/ocaml-aws/issues"
dev-repo: "git+https://github.com/inhabitedtype/ocaml-aws.git"
depends: [
  "ocaml" {>= "4.08"}
  "atdgen" {>= "2.10"}
  "yojson"
  "base-unix"
  "cmdliner" {>= "1.1.0"}
  "fmt"
  "yojson" {>= "1.7.0" & < "2.0"}
  "ocaml-compiler-libs" {>= "0.11.0" }
  "ocamlgraph"
  "dune" {>= "2.7"}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
