opam-version: "2.0"
version: "1.2"
synopsis: "Amazon Web Services SDK bindings for lwt"
description: "Amazon Web Services SDK bindings for lwt"
maintainer: "Tim McGilchrist <timmcgil@gmail.com>"
authors: [
  "Spiros Eliopoulos <spiros@inhabitedtype.com>"
  "Daniel Patterson <dbp@dbpmail.net>"
  "Tim McGilchrist <timmcgil@gmail.com>"
]
license: "BSD-3-clause"
homepage: "https://github.com/inhabitedtype/ocaml-aws"
doc: "https://github.com/inhabitedtype/ocaml-aws"
bug-reports: "https://github.com/inhabitedtype/ocaml-aws/issues"
dev-repo: "git+https://github.com/inhabitedtype/ocaml-aws.git"
depends: [
  "ocaml" {>= "4.08"}
  "aws" {= version}
  "lwt" {>= "4.0.0" & < "5.8.0"}
  "cohttp" {>= "2.4.0" & < "3.0.0"}
  "cohttp-lwt" {>= "2.4.0" & < "3.0.0"}
  "cohttp-lwt-unix" {>= "0.99.0"}
  "dune" {>= "2.7"}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
