opam-version: "2.0"
maintainer: "Tim McGilchrist <timmcgil@gmail.com>"
authors: [ "Tim McGilchrist <timmcgil@gmail.com>"]
synopsis: "Amazon Web Services SDK"
description: """
Test helpers for Amazon Web Services SDK
"""
license: "BSD-3-clause"
homepage: "https://github.com/inhabitedtype/ocaml-aws"
dev-repo: "git+https://github.com/inhabitedtype/ocaml-aws.git"
bug-reports: "https://github.com/inhabitedtype/ocaml-aws/issues"
doc: "https://github.com/inhabitedtype/ocaml-aws"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "qcheck"
]
