opam-version: "2.0"
synopsis: "Amazon Web Services SDK"
description: """\
Amazon Web Services SDK
ocaml-aws is an Amazon Web Services SDK for OCaml. Its source
distribution includes a core runtime API and a code generation tool
that generates individual libraries from [botocore][] service
descriptions."""
version: "1.2"
maintainer: "Tim McGilchrist <timmcgil@gmail.com>"
authors: [
  "Spiros Eliopoulos <spiros@inhabitedtype.com>"
  "Daniel Patterson <dbp@dbpmail.net>"
  "Tim McGilchrist <timmcgil@gmail.com>"
]
license: "BSD-3-clause"
homepage: "https://github.com/inhabitedtype/ocaml-aws"
doc: "https://github.com/inhabitedtype/ocaml-aws"
bug-reports: "https://github.com/inhabitedtype/ocaml-aws/issues"
dev-repo: "git+https://github.com/inhabitedtype/ocaml-aws.git"
depends: [
  "ocaml" {>= "4.08"}
  "calendar"
  "ezxmlm"
  "digestif" {>= "0.7"}
  "base64" {>= "3.1.0"}
  "uri" {>= "4.1.0"}
  "dune" {>= "2.7"}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
