(executables
 (names aws_gen endpoint_gen)
 (public_names aws-gen endpoint-gen)
 (package aws-gen)
 (libraries yojson cmdliner compiler-libs.common fmt unix ocamlgraph atdgen
   str)
 (preprocess
  (per_module
   ((action
     (run %{bin:cppo} -V OCAML:%{ocaml_version} %{input-file}))
    syntax))))
