(executables
 (names test_async test_lwt)
 (flags
  (:standard -w -27 -w -33))
 (modules test_async test_lwt aws_autoscaling_test)
 (libraries aws aws_autoscaling aws-async aws-lwt aws-ec2 oUnit yojson async
   cohttp-async lwt cohttp-lwt cohttp-lwt-unix))

(rule
 (alias runtest)
 (deps test_async.exe)
 (action
  (run %{deps})))

(rule
 (alias runtest)
 (deps test_lwt.exe)
 (action
  (run %{deps})))
