(tests
 (names test_async test_lwt)
 (package aws-autoscaling)
 (modules test_async test_lwt aws_autoscaling_test)
 (libraries aws aws-autoscaling aws-async aws-lwt aws-ec2 ounit2 yojson async
   cohttp-async lwt cohttp-lwt cohttp-lwt-unix))

(rule
 (alias runtest)
 (deps test_async.exe)
 (action
  (run %{deps})))

(rule
 (alias runtest)
 (deps test_lwt.exe)
 (action
  (run %{deps})))
