(tests
 (names test_async test_lwt)
 (package aws-cloudtrail)
 (flags
  (:standard -w -27 -w -33))
 (modules test_async test_lwt aws_cloudtrail_test)
 (libraries aws aws-cloudtrail aws-async aws-lwt ounit2 yojson async
   cohttp-async lwt cohttp-lwt cohttp-lwt-unix))

(rule
 (alias runtest)
 (deps test_async.exe)
 (action
  (run %{deps})))

(rule
 (alias runtest)
 (deps test_lwt.exe)
 (action
  (run %{deps})))
