(executables
 (names test_async test_lwt)
 (flags (:standard -w -27 -w -33))
 (modules test_async test_lwt aws_lambda_test)
 (libraries aws aws_lambda aws-async aws-lwt
            oUnit yojson
            async cohttp-async
            lwt cohttp-lwt cohttp-lwt-unix))

(rule
 (alias runtest)
 (deps test_async.exe)
 (action (run %{deps})))

(rule
 (alias runtest)
 (deps test_lwt.exe)
 (action (run %{deps})))
