(tests
 (names test_async test_lwt)
 (package aws-sqs)
 (modules test_async test_lwt aws_sqs_test)
 (libraries aws aws-sqs aws-async aws-lwt ounit2 yojson async cohttp-async
   lwt cohttp-lwt cohttp-lwt-unix))

(rule
 (alias runtest)
 (deps test_async.exe)
 (action
  (run %{deps})))

(rule
 (alias runtest)
 (deps test_lwt.exe)
 (action
  (run %{deps})))
